feat: starting product crud
